Working on CT spacing issues

--- a/src/applications/gi/sass/partials/_gi-compare-page.scss
+++ b/src/applications/gi/sass/partials/_gi-compare-page.scss
@@ -38,6 +38,7 @@
   }
 
   .compare-header {
+    height: 100%;
     position: relative;
     @media (max-width: $small-screen) {
       height: auto;
